# sraniq

./: Makefile  Pipfile  README.md  docker-compose.yaml  mypy.ini  pyproject.toml
scripts/: server.py  worker.py
sraniq/: app.py  config.py  http_client.py  task.py
sraniq/views/: __init__.py  constants.py  errors.py  index.py  task.py  task_detail.py
tests/: common.py  conftest.py  test_app.py  test_config.py  test_http_client.py  test_task.py
tests/views/: test_index.py  test_task.py  test_task_detail.py
