[tool.poetry]
name = "sraniq"
version = "0.1.0"
description = ""
authors = ["Peter Hull"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sanic = "^23.12.0"
sanic-json-logging = "^4.1.2"
redis = "^5.0.1"
rq = "^1.15.1"

[tool.poetry.group.dev.dependencies]
coverage = "^7.4.0"
pytest = "^7.4.4"
black = "^23.12.1"
flake8 = "^6.1.0"
mypy = "^1.8.0"
fakeredis = "^2.20.1"
sanic-testing = "^23.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
